--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -20,7 +20,7 @@
   <tbody>
     {{#each orders}}
     <tr>
-      <th scope="row">{{this.deliveryDetails.Date}}</th>
+      <th scope="row">{{this.date}}</th>
       <td scope="row">{{this.deliveryDetails.address}}</td>
 
       <td scope="row">{{this.totalAmount}}</td>
