sales, img zoom,ordered products

--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -1,5 +1,5 @@
 <!-- Sale & Revenue Start -->
-<section class="p-3">
+<section class="p-3 pb-5">
 
 <div class="container-fluid pt-4 px-4">
   <div class="row g-4 dashCards">
@@ -87,7 +87,7 @@
 
     </div>
     <div class="table-responsive">
-      <table id="userTable" class="table mt-5 pl-3">
+      <table class="table  pl-3">
         <thead>
           <tr>
             <th scope="col">Name</th>
@@ -112,7 +112,7 @@
     left: 30rem;
     overflow-x: hidden;
     overflow-y:hidden;
-    height: 25rem;
+    height: 36rem;
     border-radius: 6px;
     background-color: #f7f7f7;
     padding: 1rem;
