--- a/views/admin/ordered-products.hbs
+++ b/views/admin/ordered-products.hbs
@@ -9,7 +9,11 @@
   <div class="card-body">
     <h5 class="card-title">{{this.product.productname}}</h5>
     <p class="card-text">{{this.product.description}}</p>
-    <p class="card-text">{{this.product.price}}</p>
+    <p class="card-text">{{this.product.price}} <span style="
+    margin-left: 4rem;
+    position: absolute;
+    bottom: 1.7rem;
+">quantity:{{this.quantity}}</span></p>
     
   </div>
   </div>
