--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -30,12 +30,15 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+   
       <script src="https://www.paypal.com/sdk/js?client-id=Ab61LbH4MK54sMRlwO083lkQ7AzRbXccZEgT37XLB1BIGDcK-RHD6K7Dp3oF5lN-FYVPdiK1nlIjp1Ec&currency=USD"></script>
     {{!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> --}}
    
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
      <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
+     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+      <script src="/javascripts/zoomsl.js"></script>
     <title>{{title}}</title>
   </head>
   <body>
