--- a/views/admin/admin-products.hbs
+++ b/views/admin/admin-products.hbs
@@ -43,7 +43,7 @@
                 alt=""
                 class="editBtn"
               /></a>
-      <a href="/admin/delete-product?id={{this._id}}" onclick="return confirm('Are you  want to delete{{this.Name}} this product')"> <i class="fa fa-trash deleteBtn" style="padding-left: 2.4rem;"></i></a></td>
+     <i class="fa fa-trash deleteBtn" style="padding-left: 2.4rem; cursor: pointer;z-index: 5000;" onclick="productRemove('{{this._id}}','{{this.productname}}')"></i></td>
     </tr>
     {{/each}}
   </tbody>
